--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary rounded-pill" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary rounded-pill">Save changes</button>
+        <button type="button" class="btn btn-primary rounded-pill" onclick="saveChanges()">Save changes</button>
       </div>
     </div>
   </div>
@@ -89,8 +89,8 @@
      </section>
 
      <!--Cards-->
-     <section class="mt-3">
-       <div class="row">
+     <section class="mt-4">
+       <div class="row task__container">
            <div class="col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-header d-flex justify-content-end gap-2">
@@ -115,5 +115,8 @@
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!--Our JS file-->
+    <script src="index.js"></script>
 </body>
 </html>
