--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Tasky</title>
 </head>
-<body>
+<body onload="loadInitialTaskCards()">
   <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -44,12 +44,12 @@
         </div>
         <div class="mb-3">
           <label for="taskdescription" class="form-label">Task Description</label>
-          <textarea rows="6" class="form-control" id="taskdescription" placeholder="Bulid an amazing Resume ..."></textarea>
+          <textarea rows="6" class="form-control" id="taskdescription" placeholder="Bulid an amazing Resume ..." maxlength="100" minlength="10"></textarea>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary rounded-pill" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary rounded-pill" onclick="saveChanges()">Save changes</button>
+        <button type="button" class="btn btn-primary rounded-pill" onclick="saveChanges()" data-bs-dismiss="modal">Save changes</button>
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@
      </section>
 
      <!--Cards-->
-     <section class="mt-4">
+     <section class="mt-3">
        <div class="row task__container">
            <div class="col-md-6 col-lg-4">
             <div class="card">
