fix edit & open task

--- a/index.html
+++ b/index.html
@@ -89,26 +89,8 @@
      </section>
 
      <!--Cards-->
-     <section class="mt-3">
-       <div class="row task__container">
-           <div class="col-md-6 col-lg-4">
-            <div class="card">
-                <div class="card-header d-flex justify-content-end gap-2">
-                    <button type="button" class="btn btn-outline-success"><i class="fas fa-pencil-alt"></i></button>
-                    <button type="button" class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button>
-                </div>
-                <img src="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg" class="card-img-top rounded-1" alt="card__image">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <span class="badge bg-primary">New</span>
-                </div>
-                <div class="card-footer text-muted">
-                    <button type="button" class="btn btn-outline-primary float-end rounded-pill">Open Task</button>
-                </div>
-              </div>
-           </div>
-       </div>
+     <section>
+       <div class="row task__container"></div>
      </section>
     </div>
     
